--- a/index.css
+++ b/index.css
@@ -5,20 +5,57 @@ body {
     margin: 0;
     padding: 0;
   }
+  carousel-item img {
+    display: block;
+    margin: 0 auto;
+    width: 75px;
+    height: 75px;
+    margin-top:50px;
+  }
+  .carousel-inner {
+    width: 1350px;
+    margin: 0 auto;
+    height:200px;
+    border-bottom:1px solid black;
+    border-radius:30px;
+  }
+  .carousel-indicators {
+    justify-content: center;
+  }
+  .carousel-indicators li {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    margin: 0 5px;
+  }
+  .carousel-indicators .active {
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+  @media (max-width: 768px) {
+        .carousel-inner {
+          width: 100%;
+          max-width: none;
+        }
+  
+        .carousel-item img {
+          max-width: 100%;
+          height: auto;
+        }
+      }
+.navbar-light .navbar-nav .nav-link {
+      color: green;
+    }
+  
+    /* Hover and click color (cyan) */
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:active {
+      color:green;
+    }
 .navbar{
     background-color:#6a6e67;
     box-shadow: 0 0 2px rgba(0, 0, 0, 2);
-  }
-
-  .navbar-light .navbar-nav .nav-link {
-    color:#000;
-  }
-
-  /* Hover and click color (cyan) */
-  .navbar-light .navbar-nav .nav-link:hover,
-  .navbar-light .navbar-nav .nav-link:focus,
-  .navbar-light .navbar-nav .nav-link:active {
-    color: maroon;
   } 
 #he
 {
